Improve how ContentSearchUtilities::lineEndings works by supporting the three common line endings.

https://bugs.webkit.org/show_bug.cgi?id=129458

Reviewed by Joseph Pecoraro.

Source/JavaScriptCore:

* inspector/ContentSearchUtilities.cpp:
(Inspector::ContentSearchUtilities::textPositionFromOffset): Remove assumption about line ending length.
(Inspector::ContentSearchUtilities::getRegularExpressionMatchesByLines): Remove assumption about
line ending type and don't try to strip the line ending. Use size_t
(Inspector::ContentSearchUtilities::lineEndings): Use findNextLineStart to find the lines.
This will include the line ending in the lines, but that is okay.
(Inspector::ContentSearchUtilities::buildObjectForSearchMatch): Use size_t.
(Inspector::ContentSearchUtilities::searchInTextByLines): Modernize.

LayoutTests:

* inspector-protocol/debugger/resources/mac-linebreaks.js: Added.
* inspector-protocol/debugger/resources/mixed-linebreaks.js: Added.
* inspector-protocol/debugger/resources/unix-linebreaks.js: Added.
* inspector-protocol/debugger/resources/windows-linebreaks.js: Added.
* inspector-protocol/debugger/searchInContent-linebreaks-expected.txt: Added.
* inspector-protocol/debugger/searchInContent-linebreaks.html: Added.


Canonical link: https://commits.webkit.org/147532@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164845 268f45cc-cd09-0410-ab3c-d52691b4dbfc